# auto-login-profile-update

./: .gitignore  .gitlab-ci.yml  MOCK_DATA.csv  all_targets.json  pyproject.toml  requirements.txt
app/: __main__.py  cli.py  discord.py  playwright_scrapper.py  text_verify.py
